<resources>
    <string name="app_name">Gym</string>
    <string name="MainPageButtonFontFamily">monospace</string>
    <string name="title_activity_maps">Map</string>
    <string name="registration_incorrect_name_error">Błąd, imię powinno zaczynać się od jednej dużej litery, a po niej, powinny następować co najmniej dwie małe litery, dozwolone są tylko znaki A-Z i a-z</string>
    <string name="registration_no_data_error">Brak wprowadzonych danych!</string>
    <string name="registration_incorrect_surname_error">Niewłaściwe nazwisko, nazwisko może się składać jedynie z liter a-z, A-Z oraz znaku \'-\', np. \'Wiktorowski-Wania\'</string>
    <string name="registration_incorrect_email_error">Błąd, niepoprawny adres email</string>
    <string name="registration_incorrect_phone_number_error">Błąd, niepoprawny numer telefonu</string>
    <string name="registration_incorrect_passwords_error">Błąd, podane hasła różnią się</string>
    <string name="gyms_list_gps_off_message">Funkcja lokalizacji jest wyłączona</string>
    <string name="gyms_list_gps_off_positive_button">Przejdź do ustawień</string>
    <string name="gyms_list_gps_off_negative_button">Anuluj</string>
    <string name="requestError">error</string>
    <string name="AvailableDietsAddDietDialogMessage">Czy na pewno chcesz dodać tą dietę?</string>
    <string name="AvailableDietsAddDietDialogTitle">Dodawanie diety</string>
    <string name="DialogPositiveButtonYes">Tak</string>
    <string name="DialogNegativeButtonNo">Nie</string>
    <string name="AvailableTicketUnlimitedEntries">Nieograniczone</string>
    <string name="AvailableTicketsNameHeader">Nazwa</string>
    <string name="AvailableTicketsDatesHeader">Ważny</string>
    <string name="AvailableTicketsPriceHeader">Cena</string>
    <string name="AvailableTrainingPlansAddTrainingDialogMessage">Czy chcesz dodać ten plan treningowy?</string>
    <string name="AvailableTrainingPlanAddTrainingDialogTitle">Potwierdzenie chęci zapisania</string>
    <string name="InformationDialogPositiveButtonOk">OK</string>
    <string name="ErrorDialogTitle">Błąd</string>
    <string name="AddTrainingDialogErrorMessage">Wystąpił błąd i nie udało się dodać planu treningowego, spróbuj ponownie później</string>
    <string name="ClassesDetailsSignOutRequirements1">\"Z zajęć można wypisać się najpóźniej do 48 godzin przed rozpoczęciem zajęć, pozostały czas do rozpoczęcia zajęć: \"</string>
    <string name="ClassesDetailsSignOutRequirements2">\" godzin\"</string>
    <string name="ClassesDetailsRunningClassesInfo">Te zajęcia już się odbyły, lub właśnie się odbywają</string>
    <string name="ClassesDetailsNoLimitsEntries">Bez ograniczeń</string>
    <string name="ClassesDetailsCorrectTicketInfo">Posiadasz odpowiedni karnet</string>
    <string name="ClassesDetailsIncorrectTicketInfo">Nie posiadasz wymaganego karnetu</string>
    <string name="ClassesDetailsSignOutDialogTitle">Wypisano</string>
    <string name="ClassesDetailsSignOutErrorMessage">Niestety nie udało się wypisać Cię z zajęć, spróbuj ponownie później</string>
    <string name="ClassesDetailsSignOutButton">Wypisz z zajęć</string>
    <string name="ClassesDetailsTooLateDialogTitle">Jest zbyt późno</string>
    <string name="ClassesDetailsTooLateDialogMessage1">\"Nie można już wypisać się z tych zajęć, ponieważ zostało tylko \"</string>
    <string name="ClassesDetailsTooLateDialogMessage2">\" do rozpoczęcia zajęć\"</string>
    <string name="ClassesDetailsTooLateClassesEndedDialogMessage">Nie można już wypisać się z tych zajęć, ponieważ już się zakończyły, lub właśnie trwają</string>
    <string name="ClassesDetailsSignUpButton">Zapisz na zajęcia</string>
    <string name="ClassesDetailsNoFreeSlotsDialogTitle">Brak wolnych miejsc</string>
    <string name="ClassesDetailsNoFreeSlotsDialogMessage">Niestety, nie ma już wolnych miejsc, sprawdź inne  zajęcia</string>
    <string name="ClassesDetailsSuccessfulSignUpDialogMessage">Gratulujemy!, pomyślnie zapisałeś się na zajęcia</string>
    <string name="ClassesDetailsSuccessfulSignUpDialogTitle">Zapisano</string>
    <string name="ClassesDetailsUnsuccessfulSignUpDialogTitle">Nie zapisano</string>
    <string name="ClassesDetailsUnsuccessfulSignUpDialogMessage">Niestety, nie nie udało nam się zapisać Cie na dane zajęcia, sprawdź swoje karnety i spróbuj później</string>
    <string name="DialogPositiveButtonUnderstand">Zrozumiałem</string>
    <string name="DieticiansDetailSignOutButton">Wypisz się</string>
    <string name="DieticiansDetailSignInButton">Zapisz się</string>
    <string name="DieticiansDetailsNoFreeSlotsDialogTitle">Brak miejsc</string>
    <string name="DieticiansDetailsNoFreeSlotsDialogMessage">Ten trener osiągnął już limit klientów, musisz poszukać innego trenera</string>
    <string name="DieticiansDetailsSuccessfulDieteticianSubscribeDialogTitle">Zapisano!</string>
    <string name="DieticiansDetailsSuccessfulDieteticianSubscribeDialogMessage">Pomyślnie zapisałeś się do danego dietetyka</string>
    <string name="DieticiansDetailsUnsuccessfulDieteticianSubscribeDialogTitle">Nieudane zapisanie</string>
    <string name="DieticiansDetailsUnsuccessfulDieteticianSubscribeDialogMessage">Niesety wystąpiły pewne problemy przy zapisywaniu Cie do dietetyka, spróbuj ponownie poźniej</string>
    <string name="DieticiansDetailsSuccessfulDieteticianUnsubscribedDialogTitle">Wypisany</string>
    <string name="DieticiansDetailsSuccessfulDieteticianUnsubscribedDialogMessage">Zostałeś wypisany od swojego dietetyka</string>
    <string name="DieticiansDetailsUnsuccessfulDieteticianUnsubscribedDialogTitle">Błąd</string>
    <string name="DieticiansDetailsUnsuccessfulDieteticianUnsubscribedDialogMessage">Wystąpił błąd, nie udało się wypisać Cię od Twojego dietetyka, spróbuj później</string>
    <string name="DieticiansDetailsIfSubcribeDialogMessage">Czy na pewno chcesz zapisać się do tego trenera?</string>
    <string name="DieticiansDetailsAlreadySubscribingDialogMessage">Jesteś już zapisany do innego dietetyka! Czy na pewno chcesz zapisać się do tego dietetyka? Będzie to skutkowało wypisaniem od obecnego dietetyka</string>
    <string name="DieticiansDetailsIfSubscribeDialogTitle">Potwierdzenie chęci zapisania</string>
    <string name="DieticiansDetailsIfUnsubcribeDialogMessage">Czy na pewno chcesz się wypisać od danego dietetyka?</string>
    <string name="DieticiansDetailsIfUnsubscribeDialogTitle">Potwierdzenie chęci wypisania</string>
    <string name="GymDetailUnsubscribeGymErrorDialogTitle">Wystąpił bład, wyloguj się i zaloguj, a następnie spróbuj ponownie</string>
    <string name="GymDetailUnsubscribeGymButton">Wypisz się</string>
    <string name="GymDetailSubscribeGymButton">Zapisz się</string>
    <string name="GymDetailSuccesfulGymSubscribeDialogTitle">Zapisano!</string>
    <string name="GymDetailSuccesfulGymSubscribeDialogMessage">Pomyślnie zapisałeś się do siłowni!</string>
    <string name="GymDetailUnsuccessfulGymSubscribeDialogTitle">Nieudane zapisanie</string>
    <string name="GymDetailUnsuccessfulGymSubscribeDialogMesage">Niesety wystąpiły pewne problemy przy zapisywaniu Cie do siłowni, spróbuj ponownie poźniej</string>
    <string name="GymDetailSuccessfulGymUnsubscribeDialogTitle">Wypisany</string>
    <string name="GymDetailSuccessfulGymUnsubscribeDialogMessage">Zostałeś wypisany ze swojej siłowni</string>
    <string name="GymDetailUnsuccessfulGymUnsubscribeDialogMessage">Wystąpił błąd, nie udało się wypisać Cię z Twojej siłowni, spróbuj później</string>
    <string name="GymDetailWantGymSubscribeDialogMessage">Czy na pewno chcesz zapisać się do tej siłowni?</string>
    <string name="GymDetaiGymAlreadySubscribedDialogMessage">Jesteś już zapisany do innej siłowni! Czy na pewno chcesz zapisać się do tej siłowni? Będzie to skutkowało wypisaniem z obecnej siłowni, oraz wypisaniem od trenera i dietetyka</string>
    <string name="GymDetailWantGymSubscribeDialogTitle">Potwierdzenie chęci zapisania</string>
    <string name="GymDetailWantGymUnsubscribeDialogMessage">Czy na pewno chcesz się wypisać z danej siłowni? Poskutkuje to również wypisaniem od trenera i dietetyka</string>
    <string name="GymDetailWantGymUnsubscribeDialogTitle">Potwierdzenie chęci wypisania</string>
    <string name="NoNetworkConnectionDialogMessage">Niestety nie udało się połączyć z serwerem, spróbuj później</string>
    <string name="NoNetworkConnectionDialogTitle">Błąd połączenia z serwerem</string>
    <string name="ComponentsListComponentNameHeader">Składnik</string>
    <string name="ComponentsListComponentQuantityHeader">Ilość</string>
    <string name="DietDaysListSubscribeDietButton">Dodaj dietę</string>
    <string name="DietDaysListUnsubscribeDietButton">Usuń dietę</string>
    <string name="DietDaysListWantDietSubscribeDialogMessage">Czy na pewno chcesz dodać tą dietę?</string>
    <string name="DietDaysListWantDietSubscribeDialogTitle">Dodawanie diety</string>
    <string name="DietDaysListWantDietUnsubscribeDialogMessage">Czy na pewno chcesz usunąć tą dietę</string>
    <string name="DietDaysListWantDietUnsubscribeDialogTitle">Usuwanie diety</string>
    <string name="GymTicketListTicketNameHeader">Nazwa</string>
    <string name="GymTicketListTicketDatesHeader">Czas obowiązywania</string>
    <string name="TrainerDetailTrainerUnsubscribeButton">Wypisz się</string>
    <string name="TrainerDetailTrainerSubscribeButton">Zapisz się</string>
    <string name="TrainerDetailMaxClientsNumberDialogTitle">Brak miejsc</string>
    <string name="TrainerDetailMaxClientsNumberDialogMessage">Ten trener osiągnął już limit klientów, musisz poszukać innego trenera</string>
    <string name="TrainerDetailSuccessfulTrainerSubcribeDialogTitle">Zapisano!</string>
    <string name="TrainerDetailSuccessfulTrainerSubcribeDialogMessage">Pomyślnie zapisałeś się do danego trenera</string>
    <string name="TrainerDetailUnsuccessfulTrainerSubcribeDialogTitle">Nieudane zapisanie</string>
    <string name="TrainerDetailUnsuccessfulTrainerSubcribeDialogMessage">Niesety wystąpiły pewne problemy przy zapisywaniu Cie do trenera, spróbuj ponownie poźniej</string>
    <string name="TrainerDetailSuccessfulTrainerUnsubcribeDialogTitle">Wypisany</string>
    <string name="TrainerDetailSuccessfulTrainerUnsubcribeDialogMessage">Zostałeś wypisany od swojego trenera</string>
    <string name="TrainerDetailUnsuccesfulTrainerUnsubscribeDialogMessage">Wystąpił błąd, nie udało się wypisać Cię od Twojego trenera, spróbuj później</string>
    <string name="TrainerDetailWantTrainerSubscribeDialogMessage">Czy na pewno chcesz zapisać się do tego trenera?</string>
    <string name="TrainerDetailTrainerAlreadySubscribedDialogMessage">Jesteś już zapisany do innego trenera! Czy na pewno chcesz zapisać się do tego trenera? Będzie to skutkowało wypisaniem od obecnego trenera</string>
    <string name="TrainerDetailWantTrainerSubscribeDialogTitle">Potwierdzenie chęci zapisania</string>
    <string name="GymHomePageTitleTextView">Siłownia</string>
    <string name="GymHomePageShowGymProfileButton">Wyświetl profil siłowni</string>
    <string name="GymHomePageFindGymButton">Wyszukaj siłownię</string>
    <string name="GymHomePageShowTrainersListButton">Wyświetl listę trenerów</string>
    <string name="GymHomePageShowDieticianListButton">Wyświetl listę dietetyków</string>
    <string name="InteractiveTrainingStopTrainingButton">Przerwij trening</string>
    <string name="InteractiveTrainingTitleTextView">Nazwa ćwiczenia</string>
    <string name="InteractiveTrainingRepetitionsTextView">Powtórzenia:</string>
    <string name="InteractiveTrainingFinishedSetsTextView">Wykonane serie</string>
    <string name="InteractiveTrainingLoadTextView">Zalecane obciążenie</string>
    <string name="InteractiveTrainingFinishExerciseButton">Wykonana seria!</string>
    <string name="InteractiveTrainingDescriptionTextView">Opis wykonania ćwiczenia:</string>
</resources>